app/styles/app.scss
@charset 'utf-8';


////////////

@import 'variables';
@import 'nav';
@import 'search';
@import 'button';

/////
.master {
  float: left;
  width: 400px;
}

.detail {
  float: left;
  width: 600px;
}

body {
  margin: 0;
  background-color: $background-color;
  font-family: 'Helvetica Neue', Helvetica, sans-serif;
}

a {
  color: $splash;
  text-decoration: none;
}

a:active {
  color: $dark-splash;
}

h1 {
  font-family: 'Helvetica Neue', Helvetica, sans-serif;
  margin: 0;
  font-size: 20px;
  color: black;
  font-weight: 500;
}

h1#title, h1.job-title {
  margin-top: 50px;
  width: 100%;
  text-align:center;
}

h1.job-title {
  margin-top: 20px;
}

div.logo-container {
  height: 60px;
  margin-top: 40px;
  width: 50%;
  text-align:center;
  margin-left: auto;
  margin-right: auto;
  img.logo {
    height: 100%;
  }
}



.card {
  border-radius: 8px;
  background: #FFFFFF;
  border: 1px solid #CCCCCC;
  -moz-box-shadow:    0px 2px 5px 0px rgba(204,204,204,0.50);
  box-shadow:         0px 2px 5px 0px rgba(204,204,204,0.50);
}


.job-posting {
  width: 62.5%;
  margin: 0 auto;
  margin-top: 30px;
  padding: 0;
}

div.job-posting.small {
  overflow: hidden;
  height: 60px;

  div {
    float: left;
    height: 100%;
    line-height: 48px;
    text-align: center;
    border-right: 1px solid $light-gray;
    height: 48px;
    margin-top:7px;
  }

  div.name-and-company {
    width: 40%;
  }

  div.location {
    left:40%;
    width: 27%;
  }

  div.posted-at {
    left: 67%;
    width: 27%;
  }

  div.arrow {
    left: 94%;
    width: 5%;
    border-right: none;
   .arrow-icon {
     position: relative;
     top: 7px;
     height: 26px
   }
  }
}

    img.location-icon {
      position: relative;
      top: 4px;
      height:20px;
      margin-right: 5px;
    }

.icon {
}

.social-link {
  color: $dark-splash;
}

div.job-posting.full {
  .content {
    width: 87%;
    margin: 0 auto;
    .header {
      height: 50px;
      border-bottom: 1px solid $light-gray;
      div {
        text-align:center;
        float:left;
        height: 100%;
        line-height: 38px;
        border-right: 1px solid $light-gray;
        height: 38px;
        margin-top: 6px;
      }
      div.left {
        width: 35%;
      }
      div.center {
        width: 30%;
      }
      div.right {
        width: 34%;
        border:none;
      }
    }
    .body {
      margin: 6px auto;
    }
    .footer {
      text-align: center;
      height: 50px;
      border-top: 1px solid $light-gray;
      button {
        height: 38px;
        margin-top: 6px;
        font-size: 13px;

        img {
          height: 15px;
          position: relative;
          top: 2px;
          margin-right: 5px;
        }
      }
    }
  }
}
  .social-links {
    margin-bottom: -25px;
    height: 25px;
    font-size: 11px;
    div {
      height: 80%;
      float:left;
      border-right: 1px solid $dark-splash;
      line-height: 25px;
    }

    .left {
      width:34%;
      text-align:right;
      margin-right: 8px;
    }
    .right {
      text-align:center;
      border:none;
      margin-left: 8px;
      margin-right: 8px;
    }
    .center {
      text-align:left;
      margin-left: 8px;
    }
  }

.social-icon {
  height: 10px;
}

footer {
  margin-top: 50px;
  p {
    text-align:center;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  left:10%;
  bottom: 0;
  height: 40px;
  border-top: 1px solid $dark-splash;
    line-height: 50px;
    font-size: 12px;
    color: $dark-splash;
  }
}


.ad {
  h1 {
    text-align:center;
    width:100%;
    margin-top: 15px;
  }
  p {
    width:80%;
    margin: 10px auto;
    font-size: 12px;
    line-height: 18px;
  }
  div.center {
    width: 80%;
    margin: 10px auto;
    height: 40px;
    text-align:center;
  button {
    height: 100%;
    font-size: 13px;
    }
  }
  margin: 30px auto;
  width: 450px;
  }

